--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,31 +11,37 @@ repository = "https://github.com/rust-num/num-complex"
 version = "0.2.3"
 readme = "README.md"
 build = "build.rs"
-exclude = ["/ci/*", "/.travis.yml", "/bors.toml"]
+exclude = ["/ci/*", "/.travis.yml", "/bors.toml", "/sgx/*"]
 
 [package.metadata.docs.rs]
 features = ["std", "serde", "rand"]
 
 [dependencies]
+sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }
 
 [dependencies.num-traits]
-version = "0.2.7"
-default-features = false
+git = "https://github.com/mesalock-linux/num-traits-sgx"
+#version = "0.2.7"
+#default-features = false
 
 [dependencies.serde]
+git = "https://github.com/mesalock-linux/serde-sgx"
 optional = true
 version = "1.0"
-default-features = false
+#default-features = false
 
 [dependencies.rand]
 optional = true
-version = "0.5"
-default-features = false
+git = "https://github.com/mesalock-linux/rand-sgx"
+tag = "v0.6.5_sgx1.0.9"
+#version = "0.6"
+#default-features = false
 
 [features]
-default = ["std"]
+default = ["std", "mesalock_sgx", "i128"]
 i128 = ["num-traits/i128"]
-std = ["num-traits/std"]
+std = ["num-traits/std", "num-traits/mesalock_sgx", "mesalock_sgx"]
+mesalock_sgx = ["sgx_tstd"]
 
 [build-dependencies]
 autocfg = "0.1.3"
